--- a/404.html
+++ b/404.html
@@ -1,24 +1,11 @@
 ---
 layout: default
+permalink: /404.html
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div class="row justify-content-center">
+  <div class="col-md-10 col-lg-8">
+    <h1 class="text-center mb-4">Oh No!</h1>
+    <p class="lead">There appears to be some sort of mix up. We can't find the page you are looking for.</p>
+  </div>
 </div>
